--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"No test specified\" && exit 0",
     "dev": "quasar dev",
+    "dev-api": "sudo ./api-swa.sh & quasar dev -T ios",
     "build": "quasar build"
   },
   "dependencies": {
@@ -31,7 +32,7 @@
     "@quasar/app-vite": "^1.9.0",
     "@types/crypto-js": "^4.2.2",
     "@types/lodash": "^4.17.1",
-    "@types/node": "^12.20.21",
+    "@types/node": "^12.20.55",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "autoprefixer": "^10.4.2",
@@ -39,8 +40,10 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^9.0.0",
     "prettier": "^2.5.1",
+    "swagger-typescript-api": "^13.0.3",
     "typescript": "^4.5.4",
     "vite-plugin-checker": "^0.6.4",
+    "vite-plugin-swagger-typescript-api": "^1.0.0",
     "vue-tsc": "^1.8.22"
   },
   "engines": {
